fixed spacing on submit and the search, sort

--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -5,7 +5,7 @@
   border: 2px solid black;
   font-size: 20px;
   background: #e0afa0;
-  border-radius: 40px;
+  border-radius: 3px;
   padding: 20px;
 }
 
