--- a/client/src/screens/CreateProduct/CreateProduct.css
+++ b/client/src/screens/CreateProduct/CreateProduct.css
@@ -16,7 +16,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px;
+  margin: 10px;
+}
+
+.createProduct_form > input {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.createProduct_form > select {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .createProduct_title  {
